# MultiplexingSocket

./: build.sh
Sources/: CMakeLists.txt
Sources/Client/: CMakeLists.txt  client.c  client.cpp
Sources/Server/: CMakeLists.txt  server.c  server_epoll.c  server_epoll.cpp
Sources/Utils/: CMakeLists.txt  SocketUtils.h
Sources/Utils/Abstract/: SocketManip.h
Sources/Utils/Srcs/: ServerManip.cpp  ServerManip.h
